--- a/source/css/popup.css
+++ b/source/css/popup.css
@@ -173,7 +173,7 @@ body {
 	background-position: 50% -53px;
 }
 
-.nav_cursor {
+.nav_mods {
 	background-position: 50% -242px;
 }
 
@@ -286,4 +286,54 @@ body {
 {
 	box-shadow: 0 0 8px rgba(0, 0, 0, .4);
 }
+
+.sqbutton {
+	display: inline-block;
+	margin-top: 10px;
+	box-sizing: border-box;
+	padding: 5px;
+	min-width: 106px;
+	cursor: pointer;
+	border-radius: 5px;
+	margin-left: 5px;
+	border: 1px solid #fc8a18;
+	color: black;
+	min-height: 90px;
+	text-align: center;
+	position: relative;
+}
+
+.sqbutton.selected {
+	background-color: #fc8a18;
+	color: white;
+}
+
+.insqbtn {
+	display: block;
+	max-width: 106px;
+	overflow: hidden;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+}
+
+.insqimg {
+	width: 106px;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	top: 0;
+	padding: 10px 0;
+}
+
+.insqimg img {
+	max-width: 106px;
+	max-height: 50px;
+	display: inline-block;
+	position: relative;
+}
+
+
 
