--- a/source/css/popup.css
+++ b/source/css/popup.css
@@ -1,352 +1,294 @@
-* { margin: 0; padding: 0; border: 0; outline: none; overflow: hidden; }
-
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;
+  overflow: hidden;
+}
 body {
-	width: 450px;
-	height: 540px; /* 540px */
-	padding-top: 48px;
-	font-family: arial,helvetica,sans-serif;
-	font-size: 12px;
-	color: #333;
-	overflow: hidden;
+  width: 460px;
+  height: 540px;
+  /* 540px */
+  padding-top: 48px;
+  font-family: arial, helvetica, sans-serif;
+  font-size: 12px;
+  color: #333;
+  overflow: hidden;
 }
-
 .topbar {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 48px;
-	background: url('http://stg.odnoklassniki.ru/res/i/p/toolbar/toolbar_x.png?v3') repeat-x;
-	box-shadow: rgba(0, 0, 0, .4) 0 0 11px 1px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 48px;
+  background: #fa9e39;
 }
-
 .logo_img {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100px;
-	height: 48px;
-	background: url('/img/logo_default.png') 50% 0 no-repeat;
-	display: none;/*inline-block;*/
-	margin-left: 0px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100px;
+  height: 48px;
+  background: url('/img/logo_default.png') 50% 0 no-repeat;
+  display: none;
+  /*inline-block;*/
+  margin-left: 0px;
 }
-
-
 .progbutton,
 .savesetts,
 .ui-accordion .ui-accordion-header {
-	background-color: #ffb256;
-	background-image: -webkit-linear-gradient(top,#ffb256,#e88017);
-	background-image: linear-gradient(top,#ffb256,#e88017);
-	text-shadow: 0 -1px 0 #c4690b;
-	box-shadow: none;
-	border: 0;
-	overflow: visible;
-	color: white;
-	font: 500 14px Arial;
-	cursor: pointer;
-	white-space: nowrap;
-	border-radius: 5px;
-	padding: 5px 21px;
-	margin: 3px;
-	-webkit-transition: box-shadow .3s;
-	transition: box-shadow .3s;
+  background-color: #fa9e39;
+  box-shadow: none;
+  border: 0;
+  overflow: visible;
+  color: white;
+  font: 500 14px Arial;
+  cursor: pointer;
+  white-space: nowrap;
+  border-radius: 2px;
+  padding: 8px 20px;
+  margin: 3px;
 }
-
-.ui-widget-content {
-	border: 1px solid #FFA017;
-	background: none;
-	color: #333;
-	border-radius: 3px;
-	background: rgba(255, 255, 255, .7);
-}
-
-.ui-accordion .ui-accordion-header-active
-{
-	border-bottom-left-radius: 0;
-	border-bottom-right-radius: 0;
-}
-
-.ui-accordion .ui-accordion-content/*-active*/
-{
-	border: 1px solid #FFB256;
-	padding: 10px;
-	margin: 3px;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
-	background-color: rgba(255, 200, 100, .2);
-	margin-top: -4px;
-}
-
 .progbutton:hover,
 .savesetts:hover,
-.ui-accordion .ui-accordion-header:hover
-{
-	box-shadow: 0 0 15px -5px #000;
+.ui-accordion .ui-accordion-header:hover {
+  background-color: #fabe65;
 }
-
+.ui-widget-content {
+  border: none;
+  color: #333;
+  background: transparent;
+  box-shadow: none;
+  height: 20px;
+}
+.ui-accordion .ui-accordion-header-active {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.ui-accordion .ui-accordion-content {
+  border: 1px solid #FFB256;
+  padding: 10px;
+  margin: 3px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: rgba(255, 200, 100, 0.2);
+  margin-top: -4px;
+}
 .usel-off {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-
 .pb_active {
-	background-color: #1DAA09;
-	background-image: -moz-linear-gradient(top,#78D81F,#1DAA09);
-	background-image: -ms-linear-gradient(top,#78D81F,#1DAA09);
-	background-image: -o-linear-gradient(top,#78D81F,#1DAA09);
-	background-image: -webkit-gradient(linear,left top,left bottom,from(#78D81F),to(#1DAA09));
-	background-image: -webkit-linear-gradient(top,#78D81F,#1DAA09);
-	background-image: linear-gradient(top,#78D81F,#1DAA09);
-	text-shadow: 0 -1px 0 #458F11;
+  background-color: #1DAA09;
 }
-
+.pb_active:hover {
+  background-color: #45d231;
+}
 .toolbar_nav {
-	-webkit-margin-before: 1em;
-	-webkit-margin-after: 1em;
-	-webkit-margin-start: 0px;
-	-webkit-margin-end: 0px;
-	-webkit-padding-start: 0px;/*40px;*/
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	vertical-align: top;
-	white-space: nowrap;
-	margin-left: 0px;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start: 0px;
+  /*40px;*/
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  vertical-align: top;
+  white-space: nowrap;
+  margin-left: 0px;
 }
-
 .toolbar_nav_i {
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	white-space: normal;
-	margin: 0 2px;
-	text-align: center;
-	
-	-webkit-transition: background .2s;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  white-space: normal;
+  margin: 0 2px;
+  text-align: center;
+  -webkit-transition: background .2s;
 }
-
 .toolbar_nav_i:hover {
-	background: rgba(0,0,0,.1);
+  background: rgba(0, 0, 0, 0.1);
 }
-
-
 .toolbar_nav_a {
-	position: relative;
-	display: block;
-	height: 48px;
-	min-width: 42px;
-	padding: 0 8px;
-	color: #F8D6B4;
-	text-decoration: none;
-	cursor: pointer;
+  position: relative;
+  display: block;
+  height: 48px;
+  min-width: 42px;
+  padding: 0 8px;
+  color: #F8D6B4;
+  text-decoration: none;
+  cursor: pointer;
 }
-
-.toolbar_nav_a__marks .toolbar_nav_i_ic {
-	
-}
-
 .toolbar_nav_i_ic {
-	position: relative;
-	height: 48px;
-	background-image: url('/img/toolbarp.png');
-	background-repeat: no-repeat;
+  position: relative;
+  height: 48px;
+  background-image: url('/img/toolbarp.png');
+  background-repeat: no-repeat;
 }
-
 .nav_setts {
-	background-position: 50% -103px;
+  background-position: 50% -103px;
 }
-
 .nav_font {
-	background-position: 50% -7px;
+  background-position: 50% -7px;
 }
-
 .nav_decor {
-	width: 60px;
-	background-position: 50% -150px;
+  width: 60px;
+  background-position: 50% -150px;
 }
-
 .nav_styles {
-	background-position: 50% -53px;
+  background-position: 50% -53px;
 }
-
 .nav_mods {
-	background-position: 50% -242px;
+  background-position: 50% -242px;
 }
-
 .nav_okchanger {
-	background-position: 50% -192px;
-	width: 80px;
+  background-position: 50% -192px;
+  width: 80px;
 }
-
 .toolbar_nav_i_tx-w {
-	position: relative;
-	padding-top: 32px;
-	font-size: 10px;
-	line-height: 14px;
-	white-space: nowrap;
+  position: relative;
+  padding-top: 32px;
+  font-size: 10px;
+  line-height: 14px;
+  white-space: nowrap;
 }
-
 .stylebutton,
 .decbutton {
-	cursor: default;
-	margin-top: 3px;
-	margin-bottom: 3px;
-	background: url('http://stg.odnoklassniki.ru/res/i/p/toolbar/toolbar_x.png?v3') repeat-x;
-	opacity: 1;
-	
-	-webkit-transition: opacity .2s;
-	-moz-transition: opacity .2s;
-	-o-transition: opacity .2s;
-	transition: opacity .2s;
+  cursor: default;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  background: url('http://stg.odnoklassniki.ru/res/i/p/toolbar/toolbar_x.png?v3') repeat-x;
+  opacity: 1;
+  -webkit-transition: opacity .2s;
+  -moz-transition: opacity .2s;
+  -o-transition: opacity .2s;
+  transition: opacity .2s;
 }
-
 .stylebutton:hover,
 .decbutton:hover {
-	opacity: .7;
+  opacity: .7;
 }
-
 .stylebg,
 .decbg {
-	width: 100%;
-	height: 33px;
-	background-position: 50% 0;
-	background-repeat: no-repeat;
-	
-	box-shadow: none;
-	
-	-webkit-transition: box-shadow .2s;
-	-moz-transition: box-shadow .2s;
-	-o-transition: box-shadow .2s;
-	transition: box-shadow .2s;
-	color: #F8f6f4;
-	padding-top: 15px;
-	text-indent: 10px;
+  width: 100%;
+  height: 33px;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  box-shadow: none;
+  -webkit-transition: box-shadow 0.2s;
+  -moz-transition: box-shadow 0.2s;
+  -o-transition: box-shadow 0.2s;
+  transition: box-shadow 0.2s;
+  color: #F8f6f4;
+  padding-top: 15px;
+  text-indent: 10px;
 }
-
 .stylebg:hover,
 .decbg:hover {
-	box-shadow: rgba(0, 0, 0, .4) 0 0 11px 1px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0 0 11px 1px;
 }
-
 #decor_block,
 #style_block,
 #fonts_block {
-	height: 100%;
-	overflow-y: scroll;
-	padding-top: 5px;
+  height: 100%;
+  overflow-y: scroll;
+  padding-top: 5px;
 }
-
 #settings_block {
-	padding-top: 10px;
-	overflow-y: auto;
-	height: 540px;
+  padding-top: 10px;
+  overflow-y: auto;
+  height: 540px;
 }
-
-.ui-accordion .progbutton
-{
-	padding: 3px 15px;
-	margin: 3px;
+.ui-accordion .progbutton {
+  padding: 5px 15px;
+  margin: 3px;
 }
-
-.ui-slider-content
-{
-	border: 1px solid #E88017;
-	background: rgba(255, 255, 255, .7);
-	border-radius: 3px;
+.ui-slider-content {
+  border: 1px solid #E88017;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 3px;
 }
-
-.ui-slider .ui-slider-range
-{
-	background-color: #FFB256;
-	background-image: -webkit-linear-gradient(bottom,#FFB256,#E88017);
-	background-image: linear-gradient(bottom,#FFB256,#E88017);
-	height: 12px;
-	border-radius: 3px;
+.ui-slider .ui-slider-range {
+  background-color: #fa9e39;
+  height: 5px;
+  top: 8px;
 }
-
-.ui-slider-horizontal .ui-slider-handle
-{
-	background-color: #FFB256;
-	background-image: -webkit-linear-gradient(top,#FFB256,#E88017);
-	background-image: linear-gradient(top,#FFB256,#E88017);
-	top: 0px;
-	margin-left: -7px;
-	width: 14px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, .4);
-	-webkit-transition: box-shadow .2s;
-	transition: box-shadow .2s;
-	border: none;
-	cursor: pointer;
-	height: 12px;
+.ui-slider-horizontal .ui-slider-handle {
+  background-color: #fabe65;
+  border: 2px solid #fabe65;
+  top: 1px;
+  margin-left: -10px;
+  width: 14px;
+  cursor: pointer;
+  height: 14px;
+  border-radius: 50%;
 }
-
-.ui-slider-horizontal .ui-slider-handle:hover
-{
-	box-shadow: 0 0 8px rgba(0, 0, 0, .4);
+.ui-slider-horizontal .ui-slider-handle.ui-state-hover {
+  background-color: #ffdc83;
+  border-color: #ffdc83;
 }
-
 .sqbutton {
-	display: inline-block;
-	margin-top: 10px;
-	box-sizing: border-box;
-	padding: 5px;
-	min-width: 106px;
-	cursor: pointer;
-	border-radius: 5px;
-	margin-left: 5px;
-	border: 1px solid #fc8a18;
-	color: black;
-	min-height: 90px;
-	text-align: center;
-	position: relative;
+  display: inline-block;
+  margin-top: 10px;
+  box-sizing: border-box;
+  padding: 5px;
+  min-width: 106px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-left: 5px;
+  border: 1px solid #fc8a18;
+  color: black;
+  min-height: 90px;
+  text-align: center;
+  position: relative;
 }
-
 .sqbutton.selected {
-	background-color: #fc8a18;
-	color: white;
+  background-color: #fc8a18;
+  color: white;
 }
-
 .insqbtn {
-	display: block;
-	max-width: 106px;
-	overflow: hidden;
-	text-align: center;
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
+  display: block;
+  max-width: 106px;
+  overflow: hidden;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
-
 .insqimg {
-	width: 106px;
-	text-align: center;
-	position: absolute;
-	left: 0;
-	top: 0;
-	padding: 10px 0;
+  width: 106px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px 0;
 }
-
 .insqimg img {
-	max-width: 106px;
-	max-height: 50px;
-	display: inline-block;
-	position: relative;
+  max-width: 106px;
+  max-height: 50px;
+  display: inline-block;
+  position: relative;
 }
-
 .colorb {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	border: 3px solid white;
-	display: inline-block;
-	box-shadow: 0 2px 4px -1px rgba(0,0,0,.4);
-	cursor: pointer;
-	margin: 3px 0px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid white;
+  display: inline-block;
+  box-shadow: 0 0px 0px 1px white;
+  cursor: pointer;
+  margin: -6px 2.4px;
 }
-
-
-
+.colorb:hover {
+  border-color: #fabe65;
+  box-shadow: 0 0px 0px 1px #fabe65;
+}
+.colorb.active {
+  box-shadow: 0 0px 0px 1px #df6f03;
+}
+/*# sourceMappingURL=popup.css.map */
