--- a/source/css/popup.css
+++ b/source/css/popup.css
@@ -73,6 +73,7 @@ body {
   border-bottom-right-radius: 5px;
   background-color: rgba(255, 200, 100, 0.2);
   margin-top: -4px;
+  border-radius: 2px;
 }
 .usel-off {
   -webkit-user-select: none;
@@ -161,16 +162,16 @@ body {
   cursor: default;
   margin-top: 3px;
   margin-bottom: 3px;
-  background: url('http://stg.odnoklassniki.ru/res/i/p/toolbar/toolbar_x.png?v3') repeat-x;
+  background: #fa9e39;
   opacity: 1;
-  -webkit-transition: opacity .2s;
-  -moz-transition: opacity .2s;
-  -o-transition: opacity .2s;
-  transition: opacity .2s;
+  -webkit-transition: background .2s;
+  -moz-transition: background .2s;
+  -o-transition: background .2s;
+  transition: background .2s;
 }
 .stylebutton:hover,
 .decbutton:hover {
-  opacity: .7;
+  background: #fabe65;
 }
 .stylebg,
 .decbg {
@@ -179,17 +180,9 @@ body {
   background-position: 50% 0;
   background-repeat: no-repeat;
   box-shadow: none;
-  -webkit-transition: box-shadow 0.2s;
-  -moz-transition: box-shadow 0.2s;
-  -o-transition: box-shadow 0.2s;
-  transition: box-shadow 0.2s;
   color: #F8f6f4;
   padding-top: 15px;
   text-indent: 10px;
-}
-.stylebg:hover,
-.decbg:hover {
-  box-shadow: rgba(0, 0, 0, 0.4) 0 0 11px 1px;
 }
 #decor_block,
 #style_block,
@@ -206,6 +199,21 @@ body {
 .ui-accordion .progbutton {
   padding: 5px 15px;
   margin: 3px;
+  position: relative;
+}
+.ui-accordion .progbutton.new {
+  padding-left: 40px;
+}
+.ui-accordion .progbutton.new::after {
+  content: 'new ';
+  display: inline-block;
+  position: absolute;
+  top: -1px;
+  left: 4px;
+  border-radius: 2px;
+  background-color: red;
+  color: white;
+  padding: 2px;
 }
 .ui-slider-content {
   border: 1px solid #E88017;
