Added live rebuilding. run `gulp` or `gulp watch`

--- a/source/popups.jade
+++ b/source/popups.jade
@@ -8,6 +8,7 @@ html
 		script(type='text/javascript', src='js/jquery.js')
 		script(type='text/javascript', src='js/popup.js')
 		script(type='text/javascript', src='js/jquery-ui.js')
+
 	body
 		#topbar.topbar
 			.logo_img
@@ -34,5 +35,6 @@ html
 				h3(data-lang="General")
 				div
 					#s_mailbar.progbutton(data-lang="HidePanelMail")
+					#s_fullredirect.progbutton(data-lang="RedirectLinks")
 
 
